--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+
+  
+  
+
   <div class="top-bar">
     <div class="top-bar-left">
       <ul class="menu">
@@ -71,7 +75,7 @@
             <img src="img/oyako.png" alt="">
           </div>
         </div>
-        <div class="large-6 medium-6 cell">
+        <div class="large-6 medium-6 cell right">
           <div class="primary callout">
             <h3 class="disk__title">スリムでスタイリッシュ<br>
               浄水型ウォーターサーバー</h3>
@@ -81,10 +85,15 @@
               口にするものすべてに繋がっている「水」。<br>
               今日から、水の大切さを意識してみませんか？</p>
             <div class="disk__server">
-              <img src="img/server.png" alt="">
-              <p class="server__txt">ここにスペック<br>
-                ここにスペック<br>
-                ここにスペック</p>
+              <div class="grid-x grid-padding-x">
+                <div class="large-6 medium-6 cell">
+                <img src="img/server.png" alt="">
+              </div>
+                <p class="server__txt large-6 medium-6 cell">
+                  ここにスペック<br>
+                  ここにスペック<br>
+                  ここにスペック</p>
+              </div>
             </div>
           </div>
         </div>
@@ -93,24 +102,35 @@
 
     <div class="grid-x grid-padding-x cta cta_btn">
       <div class="large-6 medium-6 cell">
-        <div class="primary callout">
+        <div class="primary callout tel">
           <p>0120-000-000</p>
         </div>
       </div>
       <div class="large-6 medium-6 cell">
-        <div class="primary callout">
+        <div class="primary callout contact">
           <p>お申込み</p>
         </div>
       </div>
     </div>
 
+
+
+
+
+
     <section class="chigai">
       <h2 class="sec_ttl">よくあるポット型と浄水型の違いとは</h2>
-      <div class="grid-x grid-padding-x tigai">
-        <div class="large-6 medium-6 cell">
+      <div class="grid-x grid-padding-x">
+        <div class="large-2 medium-6 cell">
           <div class="primary callout">
-            <p class="tigai__txt">浄水型<br>
-              水の継ぎ足しが不要<br></p>
+            <img src="img/chigai.png" alt="">
+          </div>
+        </div>
+
+        <div class="large-4 medium-6 cell">
+          <div class="primary callout">
+            <p class="tigai__txt1">浄水型</p>
+             <p class="tigai__txt2">水の継ぎ足しが不要</p>
             <p>いつでも新鮮な浄水が使える<br>
               手間がかからない<br>
               ポット型より大容量の水を使用可能<br>
@@ -139,7 +159,7 @@
             </div>
           </div>
           <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img">
+            <div class="primary callout merit1__img__1">
               <img src="img/merit01.png" alt="">
             </div>
           </div>
@@ -194,16 +214,16 @@
       <div class="merit2">
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
-            <div class="primary callout">
-              <h3 class="merit1__title">メリット<br>
-                02</h3>
-              <p class="merit1__txt">高度な衛生管理で、<br>
-                安心してお飲みいただけます。</p>
+            <div class="primary callout merit2__img">
+              <img src="img/merit02.child.png" alt="">
             </div>
           </div>
           <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img">
-              <img src="img/merit02.child.png" alt="">
+            <div class="primary callout">
+              <h3 class="merit2__title">メリット<br>
+                02</h3>
+              <p class="merit2__txt">高度な衛生管理で、<br>
+                安心してお飲みいただけます。</p>
             </div>
           </div>
         </div>
@@ -213,14 +233,14 @@
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit1__title">メリット<br>
+              <h3 class="merit3__title">メリット<br>
                 03</h3>
-              <p class="merit1__txt">コンパクトで<br>
+              <p class="merit3__txt">コンパクトで<br>
                 場所を取らない。</p>
             </div>
           </div>
           <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img">
+            <div class="primary callout merit3__img">
               <img src="img/merit05.png" alt="">
             </div>
           </div>
@@ -230,26 +250,25 @@
 
     <section class="life">
       <h2 class="sec_ttl">Life style image</h2>
-      <p>こんな方におすすめです！</p>
+      <p class="life_ttl_sub">こんな方におすすめです！</p>
       <div class="grid-x grid-padding-x">
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="life__txt">MODEL 1</p>
-            <p>共働きで<br>
-              毎日が忙しい方</p>
-          </div>
-        </div>
         <div class="large-6 medium-6 cell">
           <div class="primary callout life__img">
             <img src="img/life01.png" alt="">
+          </div>
+        </div>
+        <div class="large-6 medium-6 cell">
+          <div class="primary callout">
+            <p class="life__txt1">MODEL 1</p>
+            <p>共働きで<br>
+              毎日が忙しい方</p>
           </div>
         </div>
       </div>
       <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
-
-            <p class="life__txt">MODEL 2</p>
+            <p class="life__txt2">MODEL 2</p>
             <p>自宅で過ごす時間を<br>
               充実させたい方</p>
           </div>
@@ -262,20 +281,18 @@
       </div>
       <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="life__txt">MODEL 3</p>
-            <p>美容と健康を<br>
-              両立させたい方</p>
-          </div>
-        </div>
-        <div class="large-6 medium-6 cell">
           <div class="primary callout life__img">
             <img src="img/life03.png" alt="">
           </div>
         </div>
+        <div class="large-6 medium-6 cell">
+          <div class="primary callout">
+            <p class="life__txt3">MODEL 3</p>
+            <p>美容と健康を<br>
+              両立させたい方</p>
+          </div>
+        </div>
       </div>
-
-
     </section>
 
     <section class="customer">
@@ -283,29 +300,14 @@
       <p>お客さまの声</p>
       <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="customer__txt">Aさま（岡山県）</p>
-            <p>山路を登りながら、こう考えた。智に働けば角が<br>
-              立つ。情に棹させば流される。意地を通せば窮屈<br>
-              だ。山路を登りながら、こう考えた。智に働けば<br>
-              角が立つ。情に棹させば流される。意地を通せば<br>
-              窮屈だ。山路を登りながら、こう考えた。智に働<br>
-              けば角が立つ。情に棹させば流される。意地を通<br>
-              せば窮屈だ。山路を登りながら、こう考えた。</p>
-
-          </div>
-        </div>
-        <div class="large-6 medium-6 cell">
           <div class="primary callout customer__img">
             <img src="img/customer01.png" alt="">
           </div>
         </div>
-      </div>
-      <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
-            <p class="customer__txt">Bさま（岡山県）</p>
-            <p>山路を登りながら、こう考えた。智に働けば角が<br>
+            <p class="customer__txt">Aさま（岡山県）</p>
+            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
               立つ。情に棹させば流される。意地を通せば窮屈<br>
               だ。山路を登りながら、こう考えた。智に働けば<br>
               角が立つ。情に棹させば流される。意地を通せば<br>
@@ -314,17 +316,20 @@
               せば窮屈だ。山路を登りながら、こう考えた。</p>
           </div>
         </div>
+      </div>
+
+      <hr class="border-line">
+
+      <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout customer__img">
             <img src="img/customer02.png" alt="">
           </div>
         </div>
-      </div>
-      <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
-            <p class="customer__txt">Cさま（岡山県）</p>
-            <p>山路を登りながら、こう考えた。智に働けば角が<br>
+            <p class="customer__txt">Bさま（岡山県）</p>
+            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
               立つ。情に棹させば流される。意地を通せば窮屈<br>
               だ。山路を登りながら、こう考えた。智に働けば<br>
               角が立つ。情に棹させば流される。意地を通せば<br>
@@ -333,15 +338,34 @@
               せば窮屈だ。山路を登りながら、こう考えた。</p>
           </div>
         </div>
+      </div>
+
+      <hr class="border-line">
+
+      <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout life__img">
             <img src="img/customer03.png" alt="">
           </div>
         </div>
+        <div class="large-6 medium-6 cell">
+          <div class="primary callout">
+            <p class="customer__txt">Cさま（岡山県）</p>
+            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
+              立つ。情に棹させば流される。意地を通せば窮屈<br>
+              だ。山路を登りながら、こう考えた。智に働けば<br>
+              角が立つ。情に棹させば流される。意地を通せば<br>
+              窮屈だ。山路を登りながら、こう考えた。智に働<br>
+              けば角が立つ。情に棹させば流される。意地を通<br>
+              せば窮屈だ。山路を登りながら、こう考えた。</p>
+          </div>
+        </div>
       </div>
     </section>
 
-    <a href="#" class="button">Read more</a>
+    <div class="button-container">
+      <a href="#" class="button" style="color: black;">Read more</a>
+    </div>
 
     <section class="faq">
       <h2 class="sec_ttl">Q&A</h2>
@@ -416,27 +440,46 @@
 
 
     <section class="insta">
-      <h2 class="sec_ttl">Instagram<br>インスタグラム</h2>
+      <h2 class="sec_ttl">Instagram</h2>
+      <p class="insta_sub">インスタグラム</p>
       <div class="grid-x grid-padding-x">
         <div class="large-4 medium-4 small-4 cell">
           <div class="primary callout">
-            <p>Four cell</p>
+            <img src="img/instabox.png" alt="">
           </div>
         </div>
         <div class="large-4 medium-4 small-4 cell">
           <div class="primary callout">
-            <p>Four cell</p>
+           <img src="img/instabox.png" alt="">
           </div>
         </div>
         <div class="large-4 medium-4 small-4 cell">
           <div class="primary callout">
-            <p>Four cell</p>
+            <img src="img/instabox.png" alt="">
           </div>
         </div>
       </div>
     </section>
 
-    <a href="#" class="button">Read more</a>
+    <div class="button-container">
+      <a href="#" class="button" style="color: black;">Read more</a>
+    </div>
+
+
+    <div class="grid-x grid-padding-x cta cta_btn">
+      <div class="large-6 medium-6 cell">
+        <div class="primary callout tel">
+          <p>0120-000-000</p>
+        </div>
+      </div>
+      <div class="large-6 medium-6 cell">
+        <div class="primary callout contact">
+          <p>お申込み</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <a href="#" class="button">Read more</a>
     <div class="grid-x grid-padding-x cta">
       <div class="large-6 medium-6 cell">
         <div class="primary callout">
@@ -449,33 +492,35 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ここまでメイン -->
 
 
-    <div class="callout large secondary">
-      <div class="row">
-        <div class="large-4 columns">
-          <img src="img/logo.svg" alt="">
-        </div>
-        <div class="large-3 large-offset-2 columns">
-          <ul class="menu vertical">
-            <li><a href="#">水道直結ウォーターサーバーとは</a></li>
-            <li><a href="#">製品情報</a></li>
-            <li><a href="#">よくある質問</a></li>
-            <li><a href="#">お客様の声</a></li>
-          </ul>
-        </div>
-        <div class="large-3 columns">
-          <ul class="menu vertical">
-            <li><a href="#">お問い合わせ</a></li>
-            <li><a href="#">特定商取引法に基づく表記</a></li>
-            <li><a href="#">個人情報保護方針</a></li>
-            <li><a href="#">特定個人情報方針</a></li>
-          </ul>
+    
+      <div class="callout large secondary">
+        <div class="row">
+          <div class="large-4 columns">
+            <img src="img/logo.svg" alt="">
+          </div>
+          <div class="large-3 large-offset-2 columns">
+            <ul class="menu vertical">
+              <li><a href="#">水道直結ウォーターサーバーとは</a></li>
+              <li><a href="#">製品情報</a></li>
+              <li><a href="#">よくある質問</a></li>
+              <li><a href="#">お客様の声</a></li>
+            </ul>
+          </div>
+          <div class="large-3 columns">
+            <ul class="menu vertical">
+              <li><a href="#">お問い合わせ</a></li>
+              <li><a href="#">特定商取引法に基づく表記</a></li>
+              <li><a href="#">個人情報保護方針</a></li>
+              <li><a href="#">特定個人情報方針</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
+      
 
 
   <script src="js/vendor/jquery.js"></script>
