--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit1__title">メリット<br>
-                01</h3>
+              <h3 class="merit1__title">01</h3>
               <p class="merit1__txt">浄水型でいつでも<br>
                 おいしい水が飲める。</p>
             </div>
@@ -220,8 +219,7 @@
           </div>
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit2__title">メリット<br>
-                02</h3>
+              <h3 class="merit2__title">02</h3>
               <p class="merit2__txt">高度な衛生管理で、<br>
                 安心してお飲みいただけます。</p>
             </div>
@@ -233,8 +231,7 @@
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit3__title">メリット<br>
-                03</h3>
+              <h3 class="merit3__title">03</h3>
               <p class="merit3__txt">コンパクトで<br>
                 場所を取らない。</p>
             </div>
