--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@0;1&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -206,7 +210,7 @@
         <p class="mirit1__graph__txt">ランニングコストを大きく抑えられる理由、<br>
           それは浄水型ウォーターサーバーは、<br>
           どんなに使っても料金が一律の定額制だから！</p>
-        <p class="graph__img">
+        <p class=""graph__img>
           <img src="img/graph.png" alt="">
         </p>
       </div>
@@ -257,7 +261,7 @@
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <p class="life__txt1">MODEL 1</p>
-            <p>共働きで<br>
+            <p class="life__desk">共働きで<br>
               毎日が忙しい方</p>
           </div>
         </div>
@@ -266,7 +270,7 @@
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <p class="life__txt2">MODEL 2</p>
-            <p>自宅で過ごす時間を<br>
+            <p class="life__desk">自宅で過ごす時間を<br>
               充実させたい方</p>
           </div>
         </div>
@@ -285,7 +289,7 @@
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <p class="life__txt3">MODEL 3</p>
-            <p>美容と健康を<br>
+            <p class="life__desk">美容と健康を<br>
               両立させたい方</p>
           </div>
         </div>
