--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="large-7 medium-4 small-4 cell">
         <div class="primary callout">
           <p>今話題の浄水型だから無料設置後すぐに使える</p>
-          <p>Y・S Advance</p>
-          <p>WATAR SERVER</p>
+          <p class="mv_title">Y・S Advance</p>
+          <p class="mv_title">WATAR SERVER</p>
         </div>
       </div>
       <div class="large-3 medium-4 small-4 cell">
@@ -362,15 +362,16 @@
           </div>
         </div>
       </div>
+      <div class="button-container">
+        <a href="#" class="button" style="color: black;">Read more</a>
+      </div>
     </section>
 
-    <div class="button-container">
-      <a href="#" class="button" style="color: black;">Read more</a>
-    </div>
+    
 
     <section class="faq">
       <h2 class="sec_ttl">Q&A</h2>
-      <p>よくある質問</p>
+      <p class="faq_sub">よくある質問</p>
       <ul class="accordion" data-accordion data-allow-all-closed="true">
         <li class="accordion-item is-active" data-accordion-item>
           <!-- Accordion tab title -->
