--- a/index.html
+++ b/index.html
@@ -147,16 +147,17 @@
             <div class="large-12 medium-6 cell chigai__txt">
 
 
-              <img src="img/chigai.png" alt="">
+              <!-- <img src="img/chigai.png" alt=""> -->
       
               <div class="chigai__box">
-                <p class="tigai__txt1">浄水型</p>
+                <p class="tigai__txt1">Y・S Advanceの浄水型サーバー</p>
                 <p class="tigai__txt2">水の継ぎ足しが不要</p>
-                <p>いつでも新鮮な浄水が使える<br>
-                  手間がかからない<br>
-                  ポット型より大容量の水を使用可能<br>
-                  コンパクトで場所を取らない</p>
+                <p>1. いつでも新鮮な浄水が使える<br>
+                  2. 水道直結だから手間がかからない<br>
+                  3. ポット型より大容量の水を使用可能<br>
+                  4. コンパクトで場所を取らない</p>
               </div>
+              <img class="chigai_img_02" src="img/chigai_img.png" alt="">
       
             </div>          </div>
         </div>
