--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@0;1&family=Zen+Old+Mincho&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@0;1&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+KR:wght@100..900&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
   <!-- スワイパー -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -75,11 +74,10 @@
 
   <!-- ここからメイン -->
 
-  <div class="grid-container full">
 
     <section class="disk">
       <h2 class="sec_ttl">浄水型ウォーターサーバーとは？</h2>
-      <div class="grid-x grid-padding-x cta">
+      <div class="grid-x grid-padding-x cta grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout disk__img">
             <img src="img/oyako.png" alt="">
@@ -110,7 +108,6 @@
       </div>
     </section>
 
-  </div>
 
 
   <div class="grid-container">
@@ -152,12 +149,11 @@
               <div class="chigai__box">
                 <p class="tigai__txt1">Y・S Advanceの浄水型サーバー</p>
                 <p class="tigai__txt2">水の継ぎ足しが不要</p>
-                <p>1. いつでも新鮮な浄水が使える<br>
+                <p class="chigai__p">1. いつでも新鮮な浄水が使える<br>
                   2. 水道直結だから手間がかからない<br>
                   3. ポット型より大容量の水を使用可能<br>
                   4. コンパクトで場所を取らない</p>
               </div>
-              <img class="chigai_img_02" src="img/chigai_img.png" alt="">
       
             </div>          </div>
         </div>
@@ -228,7 +224,7 @@
         <p class="mirit1__graph__txt">ランニングコストを大きく抑えられる理由、<br>
           それは浄水型ウォーターサーバーは、<br>
           どんなに使っても料金が一律の定額制だから！</p>
-        <p class="" graph__img>
+        <p class="graph__img">
           <img src="img/graph.png" alt="">
         </p>
       </div>
