--- a/voice.html
+++ b/voice.html
@@ -83,7 +83,7 @@
                 出会えました！</p>
                 <p class="voice__txt">岡山市北区　A様</p>
 
-                <div class="button-container">
+                <div class="button-container voice_sec">
                   <a href="#" class="button" style="color: black;">Read more</a>
                 </div>
 
@@ -118,7 +118,7 @@
                 出会えました！</p>
                 <p class="voice__txt">岡山市北区　A様</p>
 
-                <div class="button-container">
+                <div class="button-container voice_sec">
                   <a href="#" class="button" style="color: black;">Read more</a>
                 </div>
 
@@ -153,7 +153,7 @@
                 出会えました！</p>
                 <p class="voice__txt">岡山市北区　A様</p>
 
-                <div class="button-container">
+                <div class="button-container voice_sec">
                   <a href="#" class="button" style="color: black;">Read more</a>
                 </div>
 
@@ -223,7 +223,7 @@
                 出会えました！</p>
                 <p class="voice__txt">岡山市北区　A様</p>
 
-                <div class="button-container">
+                <div class="button-container voice_sec">
                   <a href="#" class="button" style="color: black;">Read more</a>
                 </div>
 
