--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <h2 class="sec_ttl">Life style image</h2>
       <p class="life_ttl_sub">こんな方におすすめです！</p>
 
-      <div class="grid-x grid-padding-x life__item">
+      <div class="grid-x grid-padding-x life__item large-8">
         <div class="large-6 medium-6 cell life__img">
           <div class="primary callout life__img">
             <img src="img/life01.png" alt="">
@@ -306,7 +306,7 @@
         </div>
       </div>
 
-      <div class="grid-x grid-padding-x life__item">
+      <div class="grid-x grid-padding-x life__item large-8">
         <div class="large-6 medium-6 cell life__txt">
           <div class="primary callout2">
             <p class="life__txt2 life__ttl">MODEL 2</p>
@@ -321,7 +321,7 @@
         </div>
       </div>
 
-      <div class="grid-x grid-padding-x life__item">
+      <div class="grid-x grid-padding-x life__item large-8">
         <div class="large-6 medium-6 cell">
           <div class="primary callout life__img">
             <img src="img/life03.png" alt="">
@@ -411,45 +411,43 @@
 
 
 
-    <section class="faq">
-      <h2 class="sec_ttl">Q&A</h2>
-      <p class="faq_sub">よくある質問</p>
-      <ul class="accordion" data-accordion data-allow-all-closed="true">
-        <li class="accordion-item is-active" data-accordion-item>
-          <!-- Accordion tab title -->
-          <a href="#" class="accordion-title">テキスト</a>
-
-          <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
-          <div class="accordion-content" data-tab-content>
-            <p>ウォータースタンド アイコンは、サーバー本体の月額費用<br>
-              4,400円以外に追加費用はかかりません。<br>
-              ※別途水道代・電気代がかかります。</p>
-          </div>
-        </li>
-        <li class="accordion-item is-active" data-accordion-item>
-          <!-- Accordion tab title -->
-          <a href="#" class="accordion-title">レンタル料金の支払い方法は？</a>
-
-          <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
-          <div class="accordion-content" data-tab-content>
-            <p>レンタルの場合：口座振替<br>
-              売買：現金・クレジット</p>
-          </div>
-        </li>
-        <li class="accordion-item is-active" data-accordion-item>
-          <!-- Accordion tab title -->
-          <a href="#" class="accordion-title">電気代はいくらですか？</a>
-
-          <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
-          <div class="accordion-content" data-tab-content>
-            <p>テキスト</p>
-          </div>
-        </li>
+    <section class="faq row">
+      <div class="column medium-centerd">
+        <h2 class="sec_ttl">Q&A</h2>
+        <p class="faq_sub">よくある質問</p>
         <ul class="accordion" data-accordion data-allow-all-closed="true">
           <li class="accordion-item is-active" data-accordion-item>
             <!-- Accordion tab title -->
-            <a href="#" class="accordion-title">赤ちゃんのミルクに使えますか？</a>
-
+            <a href="#" class="accordion-title">
+              <div class="grid-x">
+                <div class="qa-title">
+                  <p class="ao">Q</p>
+                </div>
+                  <p>テキスト</p>
+              </div>
+            </a>
+  
+            <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+            <div class="accordion-content" data-tab-content>
+              <p>ウォータースタンド アイコンは、サーバー本体の月額費用<br>
+                4,400円以外に追加費用はかかりません。<br>
+                ※別途水道代・電気代がかかります。</p>
+            </div>
+          </li>
+          <li class="accordion-item is-active" data-accordion-item>
+            <!-- Accordion tab title -->
+            <a href="#" class="accordion-title">レンタル料金の支払い方法は？</a>
+  
+            <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+            <div class="accordion-content" data-tab-content>
+              <p>レンタルの場合：口座振替<br>
+                売買：現金・クレジット</p>
+            </div>
+          </li>
+          <li class="accordion-item is-active" data-accordion-item>
+            <!-- Accordion tab title -->
+            <a href="#" class="accordion-title">電気代はいくらですか？</a>
+  
             <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
             <div class="accordion-content" data-tab-content>
               <p>テキスト</p>
@@ -458,25 +456,36 @@
           <ul class="accordion" data-accordion data-allow-all-closed="true">
             <li class="accordion-item is-active" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">水素水は使用できますか？</a>
-
+              <a href="#" class="accordion-title">赤ちゃんのミルクに使えますか？</a>
+  
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>水素水の場合は、別途カートリッジが必要なため、まずは<br>
-                  お問い合わせください。</p>
+                <p>テキスト</p>
               </div>
             </li>
             <ul class="accordion" data-accordion data-allow-all-closed="true">
               <li class="accordion-item is-active" data-accordion-item>
                 <!-- Accordion tab title -->
-                <a href="#" class="accordion-title">売買も出来ますか？</a>
-
+                <a href="#" class="accordion-title">水素水は使用できますか？</a>
+  
                 <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
                 <div class="accordion-content" data-tab-content>
-                  <p>まずはお問い合わせください。</p>
+                  <p>水素水の場合は、別途カートリッジが必要なため、まずは<br>
+                    お問い合わせください。</p>
                 </div>
               </li>
-            </ul>
+              <ul class="accordion" data-accordion data-allow-all-closed="true">
+                <li class="accordion-item is-active" data-accordion-item>
+                  <!-- Accordion tab title -->
+                  <a href="#" class="accordion-title">売買も出来ますか？</a>
+  
+                  <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+                  <div class="accordion-content" data-tab-content>
+                    <p>まずはお問い合わせください。</p>
+                  </div>
+                </li>
+              </ul>
+      </div>
 
 
 
