--- a/voice.html
+++ b/voice.html
@@ -46,6 +46,12 @@
       
       </div>
     </div>
+
+    <div class="mv__ttl">
+      <p class="ttl_sub">-Voice-</p>
+      <p>Y's Advance</p>
+      <p>お客様の声-一覧</p>
+    </div>
     
  <div class="primary callout">
           <img src="img/mv_cta.png" alt="">
