--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="large-3 medium-4 small-4 cell">
-        <div class="primary callout server_img">
+        <div class="primary callout sever_img">
           <img src="img/server.png" alt="">
         </div>
       </div>
@@ -131,7 +131,7 @@
 
 
 
-    <section class="chigai">
+    <section class="chigai grid-container">
       <h2 class="sec_ttl">よくあるポット型と浄水型の違いとは</h2>
       <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
@@ -175,14 +175,14 @@
             </div>
           </div>
           <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img__1">
+            <div class="primary callout merit1__img">
               <img src="img/merit01.png" alt="">
             </div>
           </div>
         </div>
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img__2">
+            <div class="primary callout merit1__img">
               <img src="img/merit02.png" alt="">
             </div>
           </div>
@@ -201,14 +201,14 @@
             </div>
           </div>
           <div class="large-6 medium-6 cell txt_center">
-            <div class="primary callout merit1__img__3">
+            <div class="primary callout merit1__img">
               <img src="img/merit03.png" alt="">
             </div>
           </div>
         </div>
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell txt_center">
-            <div class="primary callout merit1__img__4">
+            <div class="primary callout merit1__img">
               <img src="img/merit04.png" alt="">
             </div>
           </div>
@@ -230,7 +230,7 @@
 
       <div class="merit2">
 
-        <h3 class="merit2__title">02</h3>
+        <h3 class="merit2__title"><span>02</span></h3>
 
         <div class="grid-x grid-padding-x merit_af">
           <div class="large-6 medium-6 cell">
@@ -291,7 +291,7 @@
     
     </section>
 
-    <section class="life">
+    <section class="life grid-container">
       <h2 class="sec_ttl">Life style image</h2>
       <p class="life_ttl_sub">こんな方におすすめです！</p>
 
@@ -342,7 +342,7 @@
 
     </section>
 
-    <section class="customer">
+    <section class="customer grid-container">
       <div class="grid-container">
         <h2 class="sec_ttl">Voice of customer</h2>
         <p>お客さまの声</p>
@@ -418,7 +418,7 @@
 
 
 
-    <section class="faq row">
+    <section class="faq row grid-container">
       <div class="column medium-centerd">
         <h2 class="sec_ttl">Q&A</h2>
         <p class="faq_sub">よくある質問</p>
