--- a/index.html
+++ b/index.html
@@ -274,14 +274,14 @@
 
       <div class="merit3">
         <div class="grid-x grid-padding-x merit_kitchen">
-          <div class="large-6 medium-6 cell">
+          <div class="large-4 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit3__title">03</h3>
+              <h3 class="merit3__title"><span>03</span></h3>
               <p class="merit3__txt">コンパクトで<br>
                 場所を取らない。</p>
             </div>
           </div>
-          <div class="large-6 medium-6 cell">
+          <div class="large-8 medium-6 cell">
             <div class="primary callout merit3__img">
               <img src="img/merit05.png" alt="">
             </div>
