--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
 
     <section id="merit01">
       <div class="merit-ttl grid-container">
-        <h3>メリット</h3>
         <h2>01</h2>
       </div>
       <div class="grid-x large-12 blue_bg">
@@ -226,7 +225,6 @@
 
     <section id="merit02">
       <div class="merit-ttl grid-container">
-        <h3>メリット</h3>
         <h2>02</h2>
       </div>
       <div class="grid-x large-12 blue_bg">
@@ -270,8 +268,10 @@
     <div class="grid-x grid-padding-x merit_kitchen">
       <div class="large-4 medium-6 cell">
         <div class="primary callout">
-          <h3 class="merit3__title"><span>03</span></h3>
-          <p class="merit3__txt">コンパクトで<br>
+          <div class="merit-ttl grid-container">
+            <h2>03</h2>
+          </div>        
+            <p class="merit3__txt">コンパクトで<br>
             場所を取らない。</p>
         </div>
       </div>
