--- a/voice.html
+++ b/voice.html
@@ -70,7 +70,7 @@
 
 
     <section class="voice">
-      <div class="grid-x grid-padding-x">
+      <div class="grid-x grid-padding-x grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <img src="img/voice_01.png" alt="">
@@ -81,7 +81,6 @@
             <div class="large-12 medium-6 cell voice__txt">
 
 
-              <!-- <img src="img/chigai.png" alt=""> -->
       
               <div class="voice__box">
 <img src="img/voice_icn.png" alt="" class="voice_icn"> 
@@ -105,7 +104,7 @@
 
 
     <section class="voice">
-      <div class="grid-x grid-padding-x">
+      <div class="grid-x grid-padding-x grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <img src="img/voice_02.png" alt="">
@@ -140,7 +139,7 @@
 
 
     <section class="voice">
-      <div class="grid-x grid-padding-x">
+      <div class="grid-x grid-padding-x grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <img src="img/voice_03.png" alt="">
@@ -175,7 +174,7 @@
 
 
     <section class="voice">
-      <div class="grid-x grid-padding-x">
+      <div class="grid-x grid-padding-x grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <img src="img/voice_04.png" alt="">
@@ -210,7 +209,7 @@
 
 
     <section class="voice">
-      <div class="grid-x grid-padding-x">
+      <div class="grid-x grid-padding-x grid-container">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
             <img src="img/voice_05.png" alt="">
@@ -247,7 +246,7 @@
 
 
 
-    <section class="insta">
+    <section class="insta grid-container">
       <h2 class="sec_ttl">Instagram</h2>
       <p class="insta_sub">インスタグラム</p>
       <div class="grid-x grid-padding-x">
@@ -274,7 +273,7 @@
     </div>
 
 
-    <div class="grid-x grid-padding-x cta cta_btn">
+    <div class="grid-x grid-padding-x cta cta_btn grid-container">
       <div class="large-6 medium-6 cell">
         <div class="primary callout tel">
           <p>0120-000-000</p>
