--- a/voice.html
+++ b/voice.html
@@ -71,12 +71,12 @@
 
     <section class="voice">
       <div class="grid-x grid-padding-x grid-container">
-        <div class="large-6 medium-6 cell">
+        <div class="large-6 medium-6 voice_top">
           <div class="primary callout">
             <img src="img/voice_01.png" alt="">
           </div>
         </div>
-        <div class="large-6 medium-6 cell">
+        <div class="large-6 medium-6 cell voice_top_img">
           <div class="primary callout">
             <div class="large-12 medium-6 cell voice__txt">
 
