--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
     </section>
 
     <section id="merit01">
+      <h2 class="merit_01_ttl">お客さまに選ばれる3つのメリット</h2>
+
       <div class="merit-ttl grid-container">
         <h2>01</h2>
       </div>
