--- a/voice-detail.html
+++ b/voice-detail.html
@@ -345,10 +345,10 @@
 
 
 
-    <section class="customer grid-container">
+    <section class="customer grid-container full">
         <div class="grid-container">
-            <h2 class="sec_ttl">Voice of customer</h2>
-            <p>お客さまの声</p>
+            <h2 class="sec_ttl">Other Voice</h2>
+            <p>他のお客様の声</p>
             <div class="grid-x grid-padding-x customer_ttl">
                 <div class="large-6 medium-6 cell">
                     <div class="primary callout customer__img">
@@ -423,7 +423,7 @@
 
 
 
-    <section class="insta grid-container">
+    <!-- <section class="insta grid-container">
         <h2 class="sec_ttl">Instagram</h2>
         <p class="insta_sub">インスタグラム</p>
         <div class="grid-x grid-padding-x">
@@ -443,11 +443,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <div class="button-container">
+    <!-- <div class="button-container">
         <a href="#" class="button" style="color: black;">Read more</a>
-    </div>
+    </div> -->
 
 
     <div class="grid-x grid-padding-x cta cta_btn grid-container">
