--- a/voice-detail.html
+++ b/voice-detail.html
@@ -65,7 +65,9 @@
 
     <!-- ここからメイン -->
 
-    <div class="grid-x grid-padding-x grid-container kazoku">
+    <div class="grid-x grid-padding-x grid-container kazoku full">
+        <div class="grid-x grid-padding-x grid-container kazoku">
+
         <div class="large-6 medium-6 cell">
             <div class="primary callout">
                 <img src="img/voice_kazoku.jpg" alt="">
@@ -78,7 +80,8 @@
                     <li class="kazoku__item"><span>ご使用中のウォーターサーバー</span><span>Y’s Advance ウォーターサーバー</span></li>
                 </ul>
             </div>
-    </div>
+    </div>    </div>
+
 
     
 
