--- a/index.html
+++ b/index.html
@@ -164,13 +164,14 @@
 
     </section>
 
-    <section id="merit01">
+
+    <section class="merit01 blue_bg">
       <h2 class="merit_01_ttl">お客さまに選ばれる3つのメリット</h2>
 
       <div class="merit-ttl grid-container">
         <h2>01</h2>
       </div>
-      <div class="grid-x large-12 blue_bg">
+      <div class="grid-x large-12">
         <div class="large-6 merit_txt">
           <h3>浄水型でいつでも<br>
             おいしい水が飲める。</h3>
@@ -181,7 +182,7 @@
         </div>
       </div>
 
-      <div class="grid-x large-12 blue_bg">
+      <div class="grid-x large-12">
         <div class="large-6">
           <img src="img/merit02.png" alt="">
         </div>
@@ -193,7 +194,7 @@
       </div>
 
 
-      <div class="grid-x large-12 blue_bg">
+      <div class="grid-x large-12">
         <div class="large-6 merit_txt">
           <h3>水道水を濾過する<br>
             抽出仕様。</h3>
@@ -203,7 +204,7 @@
         </div>
       </div>
 
-      <div class="grid-x large-12 blue_bg">
+      <div class="grid-x large-12">
         <div class="large-6">
           <img src="img/merit04.png" alt="">
         </div>
@@ -225,11 +226,11 @@
 
     </section>
 
-    <section id="merit02">
+    <section class="merit02 blue_bg">
       <div class="merit-ttl grid-container">
         <h2>02</h2>
       </div>
-      <div class="grid-x large-12 blue_bg">
+      <div class="grid-x large-12">
         
 
         <div class="large-6">
@@ -266,6 +267,8 @@
     </div>
   </div>
 
+
+  <section class="merit03 blue_bg">
   <div class="merit3 grid-container">
     <div class="grid-x grid-padding-x merit_kitchen">
       <div class="large-4 medium-6 cell">
@@ -284,6 +287,7 @@
       </div>
     </div>
   </div>
+  </section>
 
 
 
