--- a/voice.html
+++ b/voice.html
@@ -266,11 +266,13 @@
           </div>
         </div>
       </div>
-    </section>
+   
 
-    <div class="button-container">
+    <div class="button-container-insta">
       <a href="#" class="button" style="color: black;">Read more</a>
     </div>
+
+  </section>
 
 
     <div class="grid-x grid-padding-x cta cta_btn grid-container">
