--- a/tokusyou.html
+++ b/tokusyou.html
@@ -85,14 +85,15 @@
 
         </div>
     </div>
+
     
 <header class="header" id="top">
     <h2 class="text-center">特定商取引法に基づく表記</h2>
     <p class="text-center subheader">compliance</p>
-</eader>
+</header>
 
 
-    <div class="grid-container">
+    <div class="grid-container full">
         <div class="grid-x grid-padding-x align-center">
           <div class="cell medium-10 large-8">
 
